tests/e2e/unary_complex_2.error
Error: syntax error in story at line 1, column 5

1|    a = not 2 == not 3 or not 4
          ^^^^^

E0122: `int` can't be converted to `boolean`
