tests/e2e/unary_complex_2.story
a = not 2 == not 3 or not 4
